--- a/.htaccess
+++ b/.htaccess
@@ -21,3 +21,4 @@ RewriteRule ^(.*)$ %1/%2 [R=301,L]
 RewriteCond %{THE_REQUEST} ([^\s]*)\/{2,}(\?[^\s]*)?
 RewriteRule ^(.*)$ / [R=301,L]
 
+RewriteRule ^post/([0-9]+)$ "https://localhost/rampus/wall#post-$1" [NE,R]
