--- a/.htaccess
+++ b/.htaccess
@@ -22,3 +22,5 @@ RewriteCond %{THE_REQUEST} ([^\s]*)\/{2,}(\?[^\s]*)?
 RewriteRule ^(.*)$ / [R=301,L]
 
 RewriteRule ^post/([0-9]+)$ "https://localhost/rampus/wall#post-$1" [NE,R]
+
+RewriteRule ^user/([a-zA-Z]+)$ otheruserprofile.php?username=$1 
