--- a/.htaccess
+++ b/.htaccess
@@ -26,3 +26,5 @@ RewriteRule ^post/([0-9]+)$ "https://localhost/rampus/wall#post-$1" [NE,R]
 RewriteRule ^user/([\w]+)$ other-user-profile.php?username=$1 
 
 RewriteRule ^user/([\w]+)/friends$ other-user-friends.php?username=$1 
+
+RewriteRule ^chat/([\w]+)$ chat-with-user.php?username=$1 
